@@ -18,6 +18,7 @@
 
 #include <xsd-frontend/parser.hxx>
 #include <xsd-frontend/transformations/anonymous.hxx>
+#include <xsd-frontend/transformations/enum-synthesis.cxx>
 #include <xsd-frontend/transformations/restriction.hxx>
 #include <xsd-frontend/transformations/schema-per-type.hxx>
 #include <xsd-frontend/transformations/simplifier.hxx>
@@ -718,6 +719,14 @@ main (Int argc, Char* argv[])
           }
         }
 
+        // Synthesize enumerations from unions.
+        //
+        if (cmd == "cxx-tree")
+        {
+          Transformations::EnumSynthesis trans;
+          trans.transform (*schema, tu);
+        }
+
         // Simplify the schema graph.
         //
         if (cmd == "cxx-parser")
@@ -860,6 +869,14 @@ main (Int argc, Char* argv[])
         {
           return 1; // Diagnostic has already been issued.
         }
+      }
+
+      // Synthesize enumerations from unions.
+      //
+      if (cmd == "cxx-tree")
+      {
+        Transformations::EnumSynthesis trans;
+        trans.transform (*schema, "");
       }
 
       // Simplify the schema graph.
